# query-reformulation

./: README.md  docker-compose.yml  nginx.conf
backend/: Dockerfile  handler.py  main.py  pyproject.toml
backend/app/: handler.py  main.py
frontend/: Dockerfile  app.py  pyproject.toml
frontend/app/: app.py
frontend/gradio_cached_examples/12/: log.csv
notebook/: openvino.ipynb  query_casual_training.ipynb  query_generation_dataset.ipynb  query_ppo.ipynb  query_seq2seq.ipynb
scripts/: long_query.lua  main.sh  short_query.lua
